manifests/seraphim/prod/homarr/Deployment-homarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: homarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: homarr
    app.kubernetes.io/version: v1.48.0
    helm.sh/chart: homarr-8.7.0
  name: homarr
  namespace: homarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: homarr
      app.kubernetes.io/name: homarr
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: homarr
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: homarr
        app.kubernetes.io/version: v1.48.0
        helm.sh/chart: homarr-8.7.0
    spec:
      containers:
        - env:
            - name: ENABLE_DOCKER
              value: "false"
            - name: ENABLE_KUBERNETES
              value: "false"
            - name: AUTH_LDAP_BASE
              value: ""
            - name: AUTH_LDAP_BIND_DN
              value: ""
            - name: AUTH_LDAP_GROUP_CLASS
              value: groupOfUniqueNames
            - name: AUTH_LDAP_GROUP_FILTER_EXTRA_ARG
              value: ""
            - name: AUTH_LDAP_GROUP_MEMBER_ATTRIBUTE
              value: member
            - name: AUTH_LDAP_GROUP_MEMBER_USER_ATTRIBUTE
              value: dn
            - name: AUTH_LDAP_SEARCH_SCOPE
              value: base
            - name: AUTH_LDAP_URI
              value: ""
            - name: AUTH_LDAP_USERNAME_ATTRIBUTE
              value: uid
            - name: AUTH_LDAP_USERNAME_FILTER_EXTRA_ARG
              value: ""
            - name: AUTH_LDAP_USER_MAIL_ATTRIBUTE
              value: mail
            - name: AUTH_LOGOUT_REDIRECT_URL
              value: ""
            - name: AUTH_OIDC_AUTO_LOGIN
              value: "false"
            - name: AUTH_OIDC_CLIENT_NAME
              value: OIDC
            - name: AUTH_OIDC_GROUPS_ATTRIBUTE
              value: groups
            - name: AUTH_OIDC_ISSUER
              value: ""
            - name: AUTH_OIDC_NAME_ATTRIBUTE_OVERWRITE
              value: ""
            - name: AUTH_OIDC_SCOPE_OVERWRITE
              value: openid email profile groups
            - name: AUTH_PROVIDERS
              value: credentials
            - name: AUTH_SESSION_EXPIRY_TIME
              value: 30d
            - name: ENABLE_DNS_CACHING
              value: "false"
            - name: LOG_LEVEL
              value: info
            - name: NO_EXTERNAL_CONNECTION
              value: "false"
            - name: TZ
              value: America/New_York
            - name: DB_MIGRATIONS_DISABLED
              value: "false"
            - name: DB_DRIVER
              value: better-sqlite3
            - name: DB_DIALECT
              value: sqlite
            - name: DB_URL
              value: /appdata/db.sqlite
            - name: SECRET_ENCRYPTION_KEY
              valueFrom:
                secretKeyRef:
                  key: db-encryption-key
                  name: db-encryption
          image: ghcr.io/homarr-labs/homarr:v1.48.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health/live
              port: 7575
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
          name: homarr
          ports:
            - containerPort: 7575
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health/ready
              port: 7575
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
          resources: {}
          securityContext: {}
      securityContext: {}
