manifests/seraphim/prod/homarr/Service-homarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: homarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: homarr
    app.kubernetes.io/version: v1.48.0
    helm.sh/chart: homarr-8.7.0
  name: homarr
  namespace: homarr
spec:
  ipFamilyPolicy: SingleStack
  ports:
    - name: app
      port: 7575
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: homarr
    app.kubernetes.io/name: homarr
  type: ClusterIP
