manifests/seraphim/prod/homarr/HTTPRoute-homarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  name: homarr
  namespace: homarr
spec:
  hostnames:
    - home.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homarr
          port: 7575
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
